# backtrader_tutorial

./: .gitignore  AAPL.csv  KODEX200_strategy_AntLossAversion.ipynb  KODEX200_strategy_GoldenCross.ipynb  backtrader_tutorial.ipynb  custom_pandas_data_feed.ipynb  pyproject.toml
backtrader_tutorial/: KODEX200_strategy_GoldenCross.ipynb  backtrader_tutorial.ipynb
