[tool.poetry]
name = "finance_essentials_37-64"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.4"
pandas = "^0.25.3"
backtrader = "^1.9.74"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
